# GCJFramework

./: .gitignore  CMakeLists.txt  README  license.txt
CMake/Modules/: AddBoost.cmake  FindCURL.cmake  FindRapidJSON.cmake  Packaging.cmake  Utils.cmake
Core/: CMakeLists.txt  Configuration.hpp  I_Contest.hpp  I_Module.hpp  I_ModuleInfo.hpp  I_ModuleManager.hpp  I_ModuleService.hpp  I_Solution.hpp  I_SolutionStrategy.hpp
Core/src/: I_Contest.cpp  I_Module.cpp  I_ModuleInfo.cpp  I_ModuleManager.cpp  I_ModuleService.cpp  I_Solution.cpp  I_SolutionStrategy.cpp  ModuleInfo.cpp  ModuleInfo.hpp  ModuleManager.cpp  ModuleManager.hpp  ModuleService.cpp  ModuleService.hpp
Executor/: CMakeLists.txt  GCJExecutor.vcxproj.user.in  config.json.in
Executor/src/: Environment.cpp  Environment.hpp  InputDownloader.hpp  OutputSubmitter.hpp  SolutionExecutive.cpp  SolutionExecutive.hpp  main.cpp
Generator/: CMakeLists.txt
Generator/Templates/Contest/: CMakeLists.txt.template
Generator/Templates/Solution/: CMakeLists.txt.template
Generator/Templates/Solution/src/: Configuration.hpp.template  Module.cpp.template  Module.hpp.template  Solution.cpp.template  Solution_impl.cpp.template
Generator/src/: ContestGenerator.cpp  ContestGenerator.hpp  SolutionGenerator.cpp  SolutionGenerator.hpp  main.cpp
Setup/: build.bat  build_boost-log.bat  build_boost.bat  build_dependencies.bat  build_libcurl.bat  build_libxml2.bat  build_openssl.bat  build_project.bat  build_rapidjson.bat  build_wxWidgets.bat  build_zlib.bat  patch.manifest.xml  project_vars.bat  rapidjson.patch  update_patch_manifest.bat
Setup/Package/: license.txt
Solutions/Contest-433101/: CMakeLists.txt
Solutions/Contest-433101/433101-A/: CMakeLists.txt
Solutions/Contest-433101/433101-A/src/: Configuration.hpp  Module.cpp  Module.hpp  Solution.cpp  Solution.hpp  Solution_impl.cpp
Solutions/Contest-433101/Solution-A/: CMakeLists.txt
Solutions/Contest-433101/Solution-A/src/: Configuration.hpp  Module.cpp  Module.hpp  Solution.cpp  Solution.hpp
Solutions/Contest-Example/: CMakeLists.txt
Utility/: CMakeLists.txt  CodeJamLogin.hpp  Configuration.hpp  ContestManager.hpp  GoogleLogin.hpp  I_CodeJamLogin.hpp  I_ContestManager.hpp  I_Environment.hpp  I_GoogleLogin.hpp  I_HTTPManager.hpp  JsonReadStream.hpp  JsonWriteStream.hpp
Utility/src/: CodeJamLogin.cpp  CodeJamLogin.hpp  Contest.cpp  Contest.hpp  ContestManager.cpp  ContestManager.hpp  Environment.cpp  Environment.hpp  GoogleLogin.cpp  GoogleLogin.hpp  HTTPManager.cpp  HTTPManager.hpp  I_CodeJamLogin.cpp  I_ContestManager.cpp  I_Environment.cpp  I_GoogleLogin.cpp  I_HTTPManager.cpp
